adding new styles for body and spinner

--- a/public/css/estilos.css
+++ b/public/css/estilos.css
@@ -32,3 +32,13 @@
 body {
     overflow: scroll;
 }
+
+#erro {
+    color: red;
+    font-size: 2em;
+    display: none;
+}
+
+#spinner {
+    display: none;
+}
