modifying button-id and sync-button

--- a/public/css/estilos.css
+++ b/public/css/estilos.css
@@ -42,3 +42,46 @@ body {
 #spinner {
     display: none;
 }
+
+#frase-id {
+    width: 50px;
+}
+
+#botao-sync {
+    float: right;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
